--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
   "devDependencies": {
     "@types/fs-extra": "^4.0.5",
     "@types/glob": "^5.0.33",
+    "@types/mocha": "^2.2.44",
     "@types/node": "^8.0.53",
     "@types/pug": "^2.0.4",
-    "@types/stylus": "^0.48.28"
+    "@types/sinon": "^4.0.0",
+    "@types/stylus": "^0.48.28",
+    "mocha": "^4.0.1",
+    "sinon": "^4.1.2",
+    "ts-mocha": "^1.0.3"
   },
   "scripts": {
+    "test": "ts-mocha lib/**/*.spec.ts",
+    "test-watch": "npm run test -- --watch --watch-extensions ts",
     "build": "tsc",
     "postinstall": "npm run build"
   },
