Exclude test files from the compiling

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,9 @@
     "target": "es5",
     "module": "commonjs",
     "outDir": "./dist"
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts"
+  ]
 }
