--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "dependencies": {
     "commander": "^2.12.1",
     "fs-extra": "^4.0.2",
-    "inquirer": "^4.0.0",
     "glob": "^7.1.2",
+    "inquirer": "^4.0.0",
+    "lodash": "^4.17.4",
     "pug": "^2.0.0-rc.4",
     "stylus": "^0.54.5",
     "ts-node": "^3.3.0",
@@ -19,6 +20,7 @@
     "@types/fs-extra": "^4.0.5",
     "@types/glob": "^5.0.33",
     "@types/inquirer": "0.0.35",
+    "@types/lodash": "^4.14.85",
     "@types/mocha": "^2.2.44",
     "@types/node": "^8.0.53",
     "@types/pug": "^2.0.4",
