--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "name": "static-website",
-  "version": "1.0.7",
+  "version": "1.0.11",
   "description": "Create a static multilingual website",
   "repository": "https://github.com/alex-chuev/static-website.git",
-  "main": "dist/index.js",
+  "main": "build/cli/app.js",
   "dependencies": {
+    "commander": "^2.12.1",
+    "fs-extra": "^4.0.2",
+    "glob": "^7.1.2",
+    "inquirer": "^4.0.0",
+    "lodash": "^4.17.4",
+    "pug": "^2.0.0-rc.4",
+    "stylus": "^0.54.5",
+    "typescript": "^2.6.1"
+  },
+  "devDependencies": {
     "@types/commander": "^2.11.0",
     "@types/fs-extra": "^4.0.5",
     "@types/glob": "^5.0.33",
@@ -15,20 +25,10 @@
     "@types/pug": "^2.0.4",
     "@types/sinon": "^4.0.0",
     "@types/stylus": "^0.48.28",
-    "commander": "^2.12.1",
-    "fs-extra": "^4.0.2",
-    "glob": "^7.1.2",
-    "inquirer": "^4.0.0",
-    "lodash": "^4.17.4",
-    "pug": "^2.0.0-rc.4",
-    "stylus": "^0.54.5",
-    "ts-node": "^3.3.0",
-    "typescript": "^2.6.1"
-  },
-  "devDependencies": {
     "mocha": "^3.2.0",
     "sinon": "^4.1.2",
-    "ts-mocha": "^1.0.3"
+    "ts-mocha": "^1.0.3",
+    "ts-node": "^3.3.0"
   },
   "scripts": {
     "test": "ts-mocha lib/**/*.spec.ts",
@@ -36,10 +36,9 @@
     "build": "tsc",
     "cli-init": "ts-node lib/cli/app init",
     "cli-build": "ts-node lib/cli/app build",
-    "cli": "node dist/lib/cli/app.js init",
-    "preinstall": "npm run build"
+    "prepublish": "npm run build"
   },
-  "bin": "dist/lib/cli/app.js",
+  "bin": "build/cli/app.js",
   "author": "Alex Chuev <alex@chuev.com>",
   "license": "ISC"
 }
