--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "static-website",
-  "version": "1.0.15",
+  "version": "1.0.16",
   "description": "Create a static multilingual website",
   "repository": "https://github.com/alex-chuev/static-website.git",
-  "main": "build/cli/app.js",
+  "main": "lib/cli/app.js",
   "dependencies": {
     "commander": "^2.12.1",
     "fs-extra": "^4.0.2",
@@ -37,7 +37,7 @@
     "cli": "ts-node lib/cli/app",
     "prepublish": "npm run build"
   },
-  "bin": "build/cli/app.js",
+  "bin": "lib/cli/app.js",
   "author": "Alex Chuev <alex@chuev.com>",
   "license": "ISC"
 }
