--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "static-website",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "description": "Create a static multilingual website",
   "repository": "https://github.com/alex-chuev/static-website.git",
   "main": "lib/cli/app.js",
@@ -9,10 +9,12 @@
     "fs-extra": "^4.0.2",
     "glob": "^7.1.2",
     "inquirer": "^4.0.0",
+    "live-server": "^1.2.0",
     "lodash": "^4.17.4",
     "pug": "^2.0.0-rc.4",
     "stylus": "^0.54.5",
-    "typescript": "^2.6.1"
+    "typescript": "^2.6.1",
+    "watch": "^1.0.2"
   },
   "devDependencies": {
     "@types/commander": "^2.11.0",
@@ -25,6 +27,7 @@
     "@types/pug": "^2.0.4",
     "@types/sinon": "^4.0.0",
     "@types/stylus": "^0.48.28",
+    "@types/watch": "^1.0.0",
     "mocha": "^3.2.0",
     "sinon": "^4.1.2",
     "ts-mocha": "^1.0.3",
@@ -34,7 +37,7 @@
     "test": "ts-mocha lib/**/*.spec.ts",
     "test-watch": "npm run test -- --watch --watch-extensions ts",
     "build": "tsc",
-    "cli": "ts-node lib/cli/app",
+    "cli": "ts-node lib/cli/app.ts",
     "prepublish": "npm run build"
   },
   "bin": "lib/cli/app.js",
