--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "watch": "^1.0.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.0.6",
     "@types/commander": "^2.11.0",
     "@types/fs-extra": "^4.0.5",
     "@types/glob": "^5.0.33",
@@ -28,6 +29,7 @@
     "@types/sinon": "^4.0.0",
     "@types/stylus": "^0.48.28",
     "@types/watch": "^1.0.0",
+    "chai": "^4.1.2",
     "mocha": "^3.2.0",
     "sinon": "^4.1.2",
     "ts-mocha": "^1.0.3",
