--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,9 @@ before_script:
   - npm run build
 script:
   - npm run test
+deploy:
+  provider: npm
+  email: $NPM_EMAIL
+  api_key: $NPM_TOKEN
+  on:
+    branch: master
