--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pug": "^2.0.0-rc.4",
     "stylus": "^0.54.5",
     "typescript": "^2.6.2",
+    "uglify-js": "^3.2.1",
     "watch": "^1.0.2"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@types/pug": "^2.0.4",
     "@types/sinon": "^4.0.0",
     "@types/stylus": "^0.48.28",
+    "@types/uglify-js": "^2.6.29",
     "@types/watch": "^1.0.0",
     "chai": "^4.1.2",
     "mocha": "^3.2.0",
