Create first gulp tasks

--- a/package.json
+++ b/package.json
@@ -8,6 +8,15 @@
     "commander": "^2.12.2",
     "fs-extra": "^4.0.2",
     "glob": "^7.1.2",
+    "gulp": "^3.9.1",
+    "gulp-cached": "^1.1.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-debug": "^3.1.0",
+    "gulp-merge": "^0.1.1",
+    "gulp-pug": "^3.3.0",
+    "gulp-sequence": "^0.4.6",
+    "gulp-sitemap": "^4.2.0",
+    "gulp-stylus": "^2.6.0",
     "inquirer": "^4.0.1",
     "live-server": "^1.2.0",
     "lodash": "^4.17.4",
@@ -41,7 +50,8 @@
     "build": "tsc",
     "watch": "tsc -w",
     "cli": "node lib/cli/app.js",
-    "cli-serve": "npm run cli -- serve"
+    "cli-serve": "npm run cli -- serve",
+    "gulp": "gulp --gulpfile gulp/gulpfile.js --cwd ."
   },
   "bin": "lib/cli/app.js",
   "author": "Alex Chuev <alex@chuev.com>",
