Implement pages rendering

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "gulp": "^3.9.1",
     "gulp-cached": "^1.1.1",
     "gulp-clean": "^0.3.2",
+    "gulp-data": "^1.2.1",
     "gulp-debug": "^3.1.0",
-    "gulp-merge": "^0.1.1",
     "gulp-pug": "^3.3.0",
     "gulp-sequence": "^0.4.6",
     "gulp-sitemap": "^4.2.0",
@@ -22,6 +22,7 @@
     "lodash": "^4.17.4",
     "pug": "^2.0.0-rc.4",
     "stylus": "^0.54.5",
+    "through2": "^2.0.3",
     "typescript": "^2.6.2",
     "uglify-js": "^3.2.1",
     "watch": "^1.0.2"
@@ -31,6 +32,7 @@
     "@types/commander": "^2.12.2",
     "@types/fs-extra": "^4.0.5",
     "@types/glob": "^5.0.33",
+    "@types/gulp": "^4.0.5",
     "@types/inquirer": "0.0.35",
     "@types/lodash": "^4.14.87",
     "@types/mocha": "^2.2.44",
