Continue work on gulp building

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "https://github.com/alex-chuev/static-website.git",
   "main": "build/cli/app.js",
   "dependencies": {
+    "@types/gulp-util": "^3.0.34",
     "commander": "^2.12.2",
     "fs-extra": "^4.0.2",
     "glob": "^7.1.2",
@@ -16,10 +17,14 @@
     "gulp-pug": "^3.3.0",
     "gulp-sitemap": "^4.2.0",
     "gulp-stylus": "^2.6.0",
+    "gulp-typescript": "^3.2.3",
+    "gulp-util": "^3.0.8",
     "inquirer": "^4.0.1",
     "live-server": "^1.2.0",
     "lodash": "^4.17.4",
+    "merge2": "^1.2.0",
     "pug": "^2.0.0-rc.4",
+    "stream-combiner2": "^1.1.1",
     "stylus": "^0.54.5",
     "through2": "^2.0.3",
     "typescript": "^2.6.2",
@@ -34,6 +39,7 @@
     "@types/gulp": "^4.0.5",
     "@types/inquirer": "0.0.35",
     "@types/lodash": "^4.14.87",
+    "@types/merge2": "^1.1.4",
     "@types/mocha": "^2.2.44",
     "@types/node": "^8.0.54",
     "@types/pug": "^2.0.4",
