--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "build/cli/app.js",
   "dependencies": {
     "@types/gulp-util": "^3.0.34",
+    "browser-sync": "^2.18.13",
     "commander": "^2.12.2",
     "fs-extra": "^4.0.2",
     "glob": "^7.1.2",
