--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "repository": "https://github.com/alex-chuev/static-website.git",
   "main": "build/cli/app.js",
   "dependencies": {
-    "@types/gulp-util": "^3.0.34",
     "browser-sync": "^2.18.13",
     "commander": "^2.12.2",
     "fs-extra": "^4.0.2",
@@ -35,6 +34,7 @@
     "@types/fs-extra": "^4.0.5",
     "@types/glob": "^5.0.33",
     "@types/gulp": "^4.0.5",
+    "@types/gulp-util": "^3.0.34",
     "@types/inquirer": "0.0.35",
     "@types/lodash": "^4.14.87",
     "@types/mocha": "^2.2.44",
@@ -43,6 +43,7 @@
     "@types/sinon": "^4.0.0",
     "@types/stylus": "^0.48.28",
     "@types/uglify-js": "^2.6.29",
+    "@types/vinyl": "^2.0.1",
     "chai": "^4.1.2",
     "mocha": "^3.2.0",
     "sinon": "^4.1.2"
