--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "inquirer": "^4.0.1",
     "lodash": "^4.17.4",
     "pug": "^2.0.0-rc.4",
+    "stream-to-array": "^2.3.0",
     "stylus": "^0.54.5",
     "through2": "^2.0.3",
     "typescript": "^2.6.2",
@@ -41,6 +42,7 @@
     "@types/node": "^8.0.54",
     "@types/pug": "^2.0.4",
     "@types/sinon": "^4.0.0",
+    "@types/stream-to-array": "^2.3.0",
     "@types/stylus": "^0.48.28",
     "@types/uglify-js": "^2.6.29",
     "@types/vinyl": "^2.0.1",
@@ -55,7 +57,7 @@
     "watch": "tsc -w",
     "cli": "node build/cli/app.js",
     "cli-serve": "npm run cli -- serve",
-    "gulp": "gulp --gulpfile build/gulp/gulpfile.js --cwd ."
+    "gulp": "gulp --gulpfile build/tasks/gulpfile.js --cwd ."
   },
   "bin": "build/cli/app.js",
   "author": "Alex Chuev <alex@chuev.com>",
