Split gulp tasks

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "test": "mocha build/**/*.spec.js",
     "test-watch": "npm run test -- --watch --watch-extensions .js",
     "build": "tsc",
-    "watch": "tsc -w",
+    "watch": "tsc -w --inlineSourceMap true",
     "cli": "node build/cli/app.js",
     "cli-serve": "npm run cli -- serve",
     "gulp": "gulp --gulpfile build/tasks/gulpfile.js --cwd ."
