--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "browser-sync": "^2.18.13",
     "commander": "^2.12.2",
     "fs-extra": "^4.0.2",
+    "glob": "^7.1.2",
     "gulp": "^3.9.1",
     "gulp-cached": "^1.1.1",
     "gulp-clean": "^0.3.2",
@@ -25,6 +26,7 @@
     "stylus": "^0.54.5",
     "through2": "^2.0.3",
     "typescript": "^2.6.2",
+    "uglify-js": "^3.2.2",
     "vinyl": "^2.1.0",
     "vinyl-fs": "^3.0.0"
   },
@@ -33,6 +35,7 @@
     "@types/chai": "^4.0.6",
     "@types/commander": "^2.12.2",
     "@types/fs-extra": "^4.0.5",
+    "@types/glob": "^5.0.34",
     "@types/gulp": "^4.0.5",
     "@types/inquirer": "0.0.35",
     "@types/lodash": "^4.14.87",
