--- a/package.json
+++ b/package.json
@@ -10,27 +10,13 @@
     "commander": "^2.12.2",
     "fs-extra": "^4.0.2",
     "glob": "^7.1.2",
-    "gulp": "^3.9.1",
-    "gulp-cached": "^1.1.1",
-    "gulp-clean": "^0.3.2",
-    "gulp-debug": "^3.1.0",
-    "gulp-pug": "^3.3.0",
-    "gulp-remember": "^1.0.0",
-    "gulp-sitemap": "^4.2.0",
-    "gulp-stylus": "^2.6.0",
-    "gulp-typescript": "^3.2.3",
     "inquirer": "^4.0.1",
     "lodash": "^4.17.4",
-    "map-stream": "0.0.7",
     "pug": "^2.0.0-rc.4",
     "sitemap": "^1.13.0",
-    "stream-to-array": "^2.3.0",
     "stylus": "^0.54.5",
-    "through2": "^2.0.3",
     "typescript": "^2.6.2",
-    "uglify-js": "^3.2.2",
-    "vinyl": "^2.1.0",
-    "vinyl-fs": "^3.0.0"
+    "uglify-js": "^3.2.2"
   },
   "devDependencies": {
     "@types/browser-sync": "0.0.37",
@@ -39,18 +25,14 @@
     "@types/commander": "^2.12.2",
     "@types/fs-extra": "^4.0.5",
     "@types/glob": "^5.0.34",
-    "@types/gulp": "^4.0.5",
     "@types/inquirer": "0.0.35",
     "@types/lodash": "^4.14.87",
     "@types/mocha": "^2.2.44",
     "@types/node": "^8.0.54",
     "@types/pug": "^2.0.4",
     "@types/sinon": "^4.0.0",
-    "@types/stream-to-array": "^2.3.0",
     "@types/stylus": "^0.48.28",
     "@types/uglify-js": "^2.6.29",
-    "@types/vinyl": "^2.0.1",
-    "@types/vinyl-fs": "^2.4.8",
     "chai": "^4.1.2",
     "mocha": "^3.2.0",
     "sinon": "^4.1.2"
