--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "glob": "^7.1.2",
     "inquirer": "^4.0.1",
     "lodash": "^4.17.4",
+    "path-is-inside": "^1.0.2",
     "pug": "^2.0.0-rc.4",
     "sitemap": "^1.13.0",
     "stylus": "^0.54.5",
