--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "static-website",
-  "version": "2.1.2",
+  "version": "2.2.1",
   "description": "Create a static multilingual website",
   "repository": "https://github.com/alex-chuev/static-website.git",
   "main": "build/cli/app.js",
@@ -11,8 +11,8 @@
     "fs-extra": "^4.0.2",
     "glob": "^7.1.2",
     "inquirer": "^4.0.1",
-    "is-inside": "^1.0.3",
     "lodash": "^4.17.4",
+    "minimatch": "^3.0.4",
     "path-is-inside": "^1.0.2",
     "pug": "^2.0.0-rc.4",
     "sitemap": "^1.13.0",
@@ -29,6 +29,7 @@
     "@types/glob": "^5.0.34",
     "@types/inquirer": "0.0.35",
     "@types/lodash": "^4.14.87",
+    "@types/minimatch": "^3.0.3",
     "@types/mocha": "^2.2.44",
     "@types/node": "^8.0.54",
     "@types/pug": "^2.0.4",
