Implement typescript compilation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,8 @@
     "node_modules",
     "src/**/*.ts",
     "templates"
-  ]
+  ],
+  "awesomeTypescriptLoaderOptions": {
+    "silent": true
+  }
 }
